--- a/src/popup/components/navbar.css
+++ b/src/popup/components/navbar.css
@@ -1,8 +1,8 @@
 /* http://paletton.com/#uid=23c0u0knYN5d8Vbj2R3s+IEDFzh */
 .navbar-brand {
-    color: #00ac8B !important;
+    color: #ec7c93 !important;
 }
 
 #basic-nav-dropdown {
-    color: #FF8B40 !important;
+    color: #3e678c !important;
 }
