--- a/src/content/tooltip.css
+++ b/src/content/tooltip.css
@@ -1,8 +1,3 @@
-.tooltipdiv {
-    width: 500px;
-    background-color: white;
-}
-
 .tooltipdiv p {
     max-height: 200px;
     overflow-y: scroll;
@@ -14,11 +9,11 @@
 
 .anchor-like-button {
     align-items: normal;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     border-color: rgb(0, 0, 238);
     border-style: none;
     box-sizing: content-box;
-    color: rgb(0, 0, 238); 
+    color: rgb(0, 0, 238);
     cursor: pointer;
     display: inline;
     font: inherit;
@@ -32,5 +27,9 @@
     -moz-appearance: none;
     -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
     -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
-  }
-  
+}
+
+.popover {
+    max-width: 600px !important;
+    background-color: white;
+}
