--- a/src/content/components/tooltip.css
+++ b/src/content/components/tooltip.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Pacifico");
+
 .wanderland-popover {
   width: 400px !important;
   height: 400px !important;
@@ -16,13 +18,17 @@
   border-top-right-radius: 10px !important;
   border-top-left-radius: 10px !important;
   text-align: center;
-  height: 50px;
-  background-color: #ec7c93;
+  height: 60px;
+  /* background-color: #ec7c93; */
+  background-image: linear-gradient(to right, #ec7c93 , #ff9eb1);
 }
 
-.wanderland-popover .navbar-brand {
-  font-family: 'Arial Narrow Bold', sans-serif;
+.wanderland-popover .wl-brand {
+  font-family: 'Pacifico';
   font-size: 30px;
+  color: white;
+  vertical-align: middle;
+  line-height: 50px;
 }
 
 .anchor-like-button {
@@ -45,16 +51,4 @@
   -moz-appearance: none;
   -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
   -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
-}
-
-@font-face {
-  font-family: 'Indie Flower';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Indie Flower'), local('IndieFlower'),
-      url('./IndieFlower.woff2')
-          format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
-      U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF,
-      U+FFFD;
 }
