--- a/src/popup/components/aboutPerson.css
+++ b/src/popup/components/aboutPerson.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: absolute !important;
 }
 
 .about-person .profile-picture {
