--- a/src/content/components/tooltip.css
+++ b/src/content/components/tooltip.css
@@ -51,4 +51,9 @@
   -moz-appearance: none;
   -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
   -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
+  text-transform: none !important;
+}
+
+.anchor-like-button:hover, .anchor-like-button:focus {
+  background: inherit;
 }
