--- a/src/content/components/Tooltip.css
+++ b/src/content/components/Tooltip.css
@@ -1,59 +1,68 @@
-@import url("https://fonts.googleapis.com/css?family=Pacifico");
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
 
 .wanderland-popover {
-  width: 400px !important;
-  height: 400px !important;
-  background-color: white;
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: 5px 10px 18px #888888;
+    width: 400px !important;
+    height: 400px !important;
+    background-color: white;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 5px 10px 18px #888888;
 }
 
 .wanderland-popover .wl-content {
-  border-bottom-right-radius: 10px !important;
-  border-bottom-left-radius: 10px !important;
+    border-bottom-right-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
 }
 
 .wanderland-popover .wl-navbar {
-  border-top-right-radius: 10px !important;
-  border-top-left-radius: 10px !important;
-  text-align: center;
-  height: 60px;
-  /* background-color: #ec7c93; */
-  background-image: linear-gradient(to right, #ec7c93 , #ff9eb1);
+    border-top-right-radius: 10px !important;
+    border-top-left-radius: 10px !important;
+    text-align: center;
+    height: 60px;
+    /* background-color: #ec7c93; */
+    background-image: linear-gradient(to right, #ec7c93, #ff9eb1);
 }
 
 .wanderland-popover .wl-brand {
-  font-family: 'Pacifico';
-  font-size: 30px;
-  color: white;
-  vertical-align: middle;
-  line-height: 60px;
+    font-family: 'Pacifico';
+    font-size: 30px;
+    color: white;
+    vertical-align: middle;
+    line-height: 60px;
 }
 
 .anchor-like-button {
-  align-items: normal;
-  background-color: inherit !important;
-  border-color: #ec7c93;
-  border-style: none;
-  box-sizing: content-box;
-  color: #ec7c93 !important;
-  cursor: pointer;
-  display: inline;
-  font: inherit;
-  height: auto;
-  padding: 0;
-  perspective-origin: 0 0;
-  text-align: start;
-  text-decoration: underline;
-  transform-origin: 0 0;
-  width: auto;
-  -moz-appearance: none;
-  -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
-  -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
-  text-transform: none !important;
+    align-items: normal !important;
+    background-color: inherit !important;
+    border-color: #ec7c93 !important;
+    border-style: none !important;
+    box-sizing: content-box !important;
+    color: #ec7c93 !important;
+    cursor: pointer !important;
+    display: inline !important;
+    font: inherit !important;
+    height: auto !important;
+    padding: 0 !important;
+    perspective-origin: 0 0 !important;
+    text-align: start !important;
+    text-decoration: underline !important;
+    transform-origin: 0 0 !important;
+    width: auto !important;
+    -moz-appearance: none;
+    -webkit-logical-height: 1em; /* Chrome ignores auto, so we have to use this hack to set the correct height  */
+    -webkit-logical-width: auto; /* Chrome ignores auto, but here for completeness */
+    text-transform: none !important;
 }
 
-.anchor-like-button:hover, .anchor-like-button:focus {
-  background: inherit;
+.anchor-like-button:hover,
+.anchor-like-button:focus {
+    background: inherit !important;
+}
+
+.anchor-like-button:after {
+    visibility: hidden !important;
+}
+
+.Popover {
+    z-index: 2 !important;
 }
